--- a/compton.cfg
+++ b/compton.cfg
@@ -108,7 +108,7 @@ shadow-ignore-shaped = false;
 #################################
 
 menu-opacity = 0.9;
-inactive-opacity = 0.7;
+inactive-opacity = 0.89;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -148,7 +148,7 @@ fade-out-step = 0.03;
 
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ 
-    "class_g = 'terminology'"
+    "class_g = 'Terminator'"
 ];
 
 #################################
